--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,23 @@
 cmake_minimum_required(VERSION 3.15)
 project(CEVRP)
 
+set(GOOGLETEST_VERSION 1.11.0)
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(CEVRP main.cpp
+set(DEPENDENCIES
         include/case.hpp
-        src/case.cpp)
+        src/case.cpp
+)
+
+
+add_executable(CEVRP main.cpp ${DEPENDENCIES})
 
 # Add include directories, so that the compiler can find the header files
 target_include_directories(CEVRP PRIVATE include external/include)
+
+add_subdirectory(external/googletest) # Add GoogleTest as a subdirectory
+add_executable(Tests tests/test_main.cpp
+        ${DEPENDENCIES}
+        tests/case_test.cpp)
+target_include_directories(Tests PRIVATE include external/include) # Include directories for the tests
+target_link_libraries(Tests gtest gtest_main) # Link GoogleTest for tests
