--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_subdirectory(external/googletest) # Add GoogleTest as a subdirectory
 add_executable(Tests tests/test_main.cpp
         ${DEPENDENCIES}
         tests/case_test.cpp
-        tests/utils_test.cpp)
+        tests/utils_test.cpp
+        tests/stats_interface_test.cpp)
 target_include_directories(Tests PRIVATE include external/include) # Include directories for the tests
 target_link_libraries(Tests gtest gtest_main) # Link GoogleTest for tests
